--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE html> # deklarasi versi dokumen
 <html>
 <head>
-    <title>Eror Bang...</title>
+    <title>Eror Bang...</title>  #memberikan judul di halaman website
 </head>
 <body>
-    <h1>404 NOT FOUND</h1>
+    <h1>404 NOT FOUND</h1>  #header
 </html>
