--- a/NamaAnggota.html
+++ b/NamaAnggota.html
@@ -11,7 +11,9 @@
     </header>
     <main>
         <h2>- Nugroho Rahmanto (1301213156)</h2>
-		<h2>- Brithany Zhafira Nurranty (1301213146)</h2>
+	<h2>- Brithany Zhafira Nurranty (1301213146)</h2>
+	<h2>- Rohmad Hidayat (1301213010)</h2>
+
     </main>
 </body>
 </html>
