--- a/NamaAnggota.html
+++ b/NamaAnggota.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <header>
-        <h1>NAMA AGGOTA KELOMPOK</h1>
+        <h1>NAMA ANGGOTA KELOMPOK 4</h1>
     </header>
     <main>
         <h2>- Nugroho Rahmanto (1301213156)</h2>
-	<h2>- Brithany Zhafira Nurranty (1301213146)</h2>
-	<h2>- Rohmad Hidayat (1301213010)</h2>
+		<h2>- Brithany Zhafira Nurranty (1301213146)</h2>
+		<h2>- Rohmad Hidayat (1301213010)</h2>
 
     </main>
 </body>
