--- a/Perkenalan.html
+++ b/Perkenalan.html
@@ -11,7 +11,7 @@
     </header>
     <main>
         <h3>HALO....</h3>
-		<P>Halo kenalin kami dari kelompok 4 dari kelas IF-45-06, ini adalah tugas besar web dari mata kuliah jaringan komputer</P>
+		<P>Halo perkenalkan kami kelompok 4 dari kelas IF-45-06, ini merupakan tugas besar yang dimana kami akan membuat program web server sederhana berbasis TCP socket programming dari mata kuliah "Jaringan Komputer"</P>
     </main>
 </body>
 </html>
