--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> # deklarasi versi dokumen
 <html>
 <head>
-    <title>Eror Bang...</title>  #memberikan judul di halaman website
+    <title>Error Bang...</title>  #memberikan judul di halaman website
 </head>
 <body>
     <h1>404 NOT FOUND</h1>  #header
